.config/waybar/style.css
* {
    border: none;
    border-radius: 0;
    font-family: "JetBrainsMono Nerd Font";
    font-weight: bold;
    font-size: 10px;
    min-height: 0;
}

window#waybar {
    background: rgba(21, 18, 27, 0.6);
    color: #cdd6f4;
}

tooltip {
    background: #1e1e2e;
    border-radius: 4px;
    border-width: 2px;
    border-style: solid;
    border-color: #11111b;
}

#workspaces button {
    padding: 0px;
    padding-left: 2px;
    padding-right: 2px;
    color: #313244;
}

#workspaces button.active {
    color: #a6adc8;
    background: #1e273c;
    border-top: 1.5px solid #7aa2f7;
}

#workspaces button.focused {
    color: #a6adc8;
    background: #eba0ac;
    border-top: 1.5px solid #11111f;
}

#workspaces button.urgent {
    color: #111111;
    background: #76b371;
    border-top: 1.5px solid #e6ffe1;
}

#workspaces button:hover {
    background: #11111b;
    color: #cdd6f4;
    border-top: 1.5px solid #ffffff;
}

#window,
#clock,
#pulseaudio,
#pulseaudio.microphone,
#temperature,
#workspaces,
#tray,
#user,
#custom-archbtw,
#idle_inhibitor,
#cpu,
#memory,
#custom-media,
#custom-weather,
#custom-dunst,
#privacy,
#network,
#disk {
    background: #1e1e2e;
    padding: 0px 4px;
    margin: 3px 0px;
    border: 1px solid #181825;
}

/* close to left */
#pulseaudio.microphone, #cpu, #custom-archbtw, #idle_inhibitor, #network {
    border-radius: 4px 0px 0px 4px;
}

/*close to the right */
#pulseaudio, #disk, #user, #custom-dunst, #temperature {
    border-radius: 0px 4px 4px 0px;
    margin-right: 4px;
}

/*close on both sides*/
#clock, #workspaces, #custom-media, #custom-weather, #tray, #window {
    border-radius: 4px;
    margin-right: 4px;
    margin-left: 4px;
}

#disk {
    color: #cba6f7;
}

#window {
    margin-right: 0px;
    color: #cbc0ff;
}

#temperature {
    color: #89b4fa;
}
#temperature.critical {
    color: #f7768e;
}

#clock {
    color: #cbc0ff;
    border-right: 0px;
}

#pulseaudio.microphone {
    margin-left: 4px;
    color: #89b4fa;
}

#pulseaudio {
    color: #cba6f7;
    border-left: 0px;
    border-right: 0px;
    margin-right: 4px;
}

#memory {
    color: #fab387;
}

#cpu {
    color: #a6e3a1;
}

#custom-archbtw {
    color: #89f6ff;
    margin-left: 4px;
}

#user {
    color: #89b4fa;
    margin-right: 0px;
}

#custom-previous {
    border-right-width: 0px;
}
#custom-playpause {
    border-left-width: 0px;
    border-right-width: 0px;
    color: #bdefff;
}
#custom-next {
    border-left-width: 0px;
    margin-right: 0px;
}

#custom-media {
    color: #e0ffe0;
}

#custom-weather {
    color: #cbc0ff;
    margin-right: 0px;
}

#custom-dunst {
    color: #89b4fa;
}

#workspaces {
    margin-left: 200px;
    margin-right: 200px;
}

#network {
    color: #cba6f7;
}

